redirection works now

--- a/src/main/java/frameworks_drivers/frontend/html/index.html
+++ b/src/main/java/frameworks_drivers/frontend/html/index.html
@@ -10,7 +10,7 @@
     <h1>One Word Story</h1>
     <img src="../media/logo.png" alt="One Word Story Logo">
 
-    <p><button id="play_button">Play</button></p>
+    <p onclick="myFunction()"><button id="play_button">Play</button></p>
     <h3>Latest Stories</h3>
 
     <div id="all_stories">
