Center title and logo, Add fancy button

--- a/src/main/java/frameworks_drivers/frontend/html/index.html
+++ b/src/main/java/frameworks_drivers/frontend/html/index.html
@@ -7,10 +7,16 @@
     <title>One Word Story</title>
 </head>
 <body>
-    <h1>One Word Story</h1>
-    <img src="../media/logo.png" alt="One Word Story Logo">
+    <div id="name_logo">
+        <h1>One Word Story</h1>
+        <img src="../media/logo.png" alt="One Word Story Logo">
+    </div>
 
-    <p onclick="myFunction()"><button id="play_button">Play</button></p>
+    <div class="container">
+        <div class="wrap">
+            <button class="button">Play</button>
+        </div>
+    </div>
 
     <div id="all_stories">
         <div class="column">
