--- a/src/main/java/frameworks_drivers/frontend/html/index.html
+++ b/src/main/java/frameworks_drivers/frontend/html/index.html
@@ -14,14 +14,28 @@
 
     <div class="container">
         <div class="wrap">
-            <button class="button">Play</button>
+            <form action="/play" method="POST">
+                <button class="button">Play</button>
+            </form>
         </div>
+    </div>
+
+    <div class="wrap">
+        <label class="switch">
+            <input type="checkbox" id="togBtn">
+            <div class="slider round">
+                <span onclick="location.href = '/home?get=latest'" id="latest">Latest</span>
+                <span onclick="location.href = '/home?get=liked'" id="liked">Most Liked</span>
+            </div>
+        </label>
     </div>
 
     <div id="all_stories">
         <div class="column">
             <div class="story" id="story1">
-                <h2>Title</h2>
+                <a href="/stories/1">
+                    <h2>Title</h2>
+                </a>
                 <h4>Authors</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -29,7 +43,9 @@
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="story" id="story2">
-                <h2>Title</h2>
+                <a href="/stories/2">
+                    <h2>Title</h2>
+                </a>
                 <h4>Authors</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -40,7 +56,9 @@
 
         <div class="column">
             <div class="story" id="story3">
-                <h2>Title</h2>
+                <a href="/stories/3">
+                    <h2>Title</h2>
+                </a>
                 <h4>Authors</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -48,7 +66,9 @@
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="story" id="story4">
-                <h2>Title</h2>
+                <a href="/stories/4">
+                    <h2>Title</h2>
+                </a>
                 <h4>Authors</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
