Change parameter fname to name

--- a/src/main/java/frontend/html/play.html
+++ b/src/main/java/frontend/html/play.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form action="/action_page.php">
-        <label for="fname">Enter your name:</label>
-        <input type="text" id="fname" name="fname" required><br><br>
+        <label for="name">Enter your name:</label>
+        <input type="text" id="name" name="name" required><br><br>
         <input type="submit" value="Play">
     </form>
 </body>
