Add logo; change package

--- a/src/main/java/frameworks_drivers/frontend/html/play.html
+++ b/src/main/java/frameworks_drivers/frontend/html/play.html
@@ -7,6 +7,9 @@
     <title>Play</title>
 </head>
 <body>
+    <div>
+        <img src="../media/logo.png" alt="logo">
+    </div>
     <form action="/action_page.php">
         <label for="name">Enter your name:</label>
         <input type="text" id="name" name="name" required><br><br>
