Change button "Play"

--- a/src/main/java/frameworks_drivers/frontend/html/play.html
+++ b/src/main/java/frameworks_drivers/frontend/html/play.html
@@ -10,10 +10,16 @@
     <div>
         <img src="../media/logo.png" alt="logo">
     </div>
-    <form action="/action_page.php">
+    <form action="/play">
         <label for="name">Enter your name:</label>
         <input type="text" id="name" name="name" required><br><br>
-        <input type="submit" value="Play">
+
+        <div class="container">
+            <div class="wrap">
+                <button class="button">Play</button>
+            </div>
+        </div>
+
     </form>
 </body>
 </html>
