Make logo clickable; changed border of name input to solid

--- a/src/main/java/frameworks_drivers/frontend/html/play.html
+++ b/src/main/java/frameworks_drivers/frontend/html/play.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <img src="../media/logo.png" alt="logo">
+        <img src="../media/logo.png" alt="logo" onclick="location.href = '/home'">
     </div>
     <form action="/play">
         <label for="name">Enter your name:</label>
