--- a/src/main/java/frontend/html/game.html
+++ b/src/main/java/frontend/html/game.html
@@ -13,7 +13,7 @@
             <li>
                 <div>
                     Player 1
-                    <img style="vertical-align:middle" src="../media/pencil.png" width="25" alt="Pencil">
+                    <img style="vertical-align:middle" src="../media/pencil.png" width="20" alt="Pencil">
                 </div>
             </li>
 
@@ -43,7 +43,7 @@
     </div>
 
     <div class="column" id="close_button">
-        <img style="vertical-align:middle" src="../media/close.png" width="50" alt="Close">
+        <img style="vertical-align:middle" src="../media/exit.png" width="50" alt="Close" onclick="exit()">
     </div>
 </div>
 </body>
